<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_buscarAlumnos"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:text="@string/txt_text_consultas" />

    <TextView
        android:id="@+id/txt_NumControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_text_NumControl" />

    <EditText
        android:id="@+id/editText_NumControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <TextView
        android:id="@+id/txt_Nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_text_Nombre" />

    <EditText
        android:id="@+id/editText_Nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <TextView
        android:id="@+id/txt_PrimerAp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_text_PrimerAp" />

    <EditText
        android:id="@+id/editText_PrimerAp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <TextView
        android:id="@+id/txt_SegundoAp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_text_SegundoAp" />

    <EditText
        android:id="@+id/editText_SegundoAp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_text_Edad" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_text_Semestre" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_text_Carrera" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="Ingeniería en Sistemas Computacionales" />


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_consultas" />

</LinearLayout>